frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> function
Rule 3     type -> Int
Rule 4     function -> type Identifier LParen RParen LBrace block RBrace
Rule 5     block -> block block_item
Rule 6     block -> empty
Rule 7     block_item -> statement
Rule 8     block_item -> declaration Semi
Rule 9     statement -> statement_matched
Rule 10    statement -> statement_unmatched
Rule 11    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 12    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 13    statement_unmatched -> If LParen expression RParen statement
Rule 14    statement_matched -> While LParen expression RParen statement_matched
Rule 15    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 16    statement -> Do statement While LParen expression RParen
Rule 17    statement -> For LParen block_item block_item opt_expression RParen statement
Rule 18    statement_matched -> Return expression Semi
Rule 19    statement_matched -> opt_expression Semi
Rule 20    statement_matched -> LBrace block RBrace
Rule 21    statement_matched -> Break Semi
Rule 22    statement_matched -> Continue Semi
Rule 23    opt_expression -> expression
Rule 24    opt_expression -> empty
Rule 25    declaration -> type Identifier
Rule 26    declaration -> type Identifier Assign expression
Rule 27    expression -> assignment
Rule 28    assignment -> conditional
Rule 29    conditional -> logical_or
Rule 30    logical_or -> logical_and
Rule 31    logical_and -> bit_or
Rule 32    bit_or -> xor
Rule 33    xor -> bit_and
Rule 34    bit_and -> equality
Rule 35    equality -> relational
Rule 36    relational -> additive
Rule 37    additive -> multiplicative
Rule 38    multiplicative -> unary
Rule 39    unary -> postfix
Rule 40    postfix -> primary
Rule 41    unary -> Minus unary
Rule 42    unary -> BitNot unary
Rule 43    unary -> Not unary
Rule 44    assignment -> Identifier Assign expression
Rule 45    logical_or -> logical_or Or logical_and
Rule 46    logical_and -> logical_and And bit_or
Rule 47    bit_or -> bit_or BitOr xor
Rule 48    xor -> xor Xor bit_and
Rule 49    bit_and -> bit_and BitAnd equality
Rule 50    equality -> equality NotEqual relational
Rule 51    equality -> equality Equal relational
Rule 52    relational -> relational Less additive
Rule 53    relational -> relational Greater additive
Rule 54    relational -> relational LessEqual additive
Rule 55    relational -> relational GreaterEqual additive
Rule 56    additive -> additive Plus multiplicative
Rule 57    additive -> additive Minus multiplicative
Rule 58    multiplicative -> multiplicative Mul unary
Rule 59    multiplicative -> multiplicative Div unary
Rule 60    multiplicative -> multiplicative Mod unary
Rule 61    conditional -> logical_or Question expression Colon conditional
Rule 62    primary -> Integer
Rule 63    primary -> Identifier
Rule 64    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 46
Assign               : 26 44
BitAnd               : 49
BitNot               : 42
BitOr                : 47
Break                : 21
Colon                : 61
Continue             : 22
Div                  : 59
Do                   : 16
Else                 : 11 12
Equal                : 51
For                  : 17
Greater              : 53
GreaterEqual         : 55
Identifier           : 4 25 26 44 63
If                   : 11 12 13
Int                  : 3
Integer              : 62
LBrace               : 4 20
LParen               : 4 11 12 13 14 15 16 17 64
Less                 : 52
LessEqual            : 54
Minus                : 41 57
Mod                  : 60
Mul                  : 58
Not                  : 43
NotEqual             : 50
Or                   : 45
Plus                 : 56
Question             : 61
RBrace               : 4 20
RParen               : 4 11 12 13 14 15 16 17 64
Return               : 18
Semi                 : 8 18 19 21 22
While                : 14 15 16
Xor                  : 48
error                : 

Nonterminals, with rules where they appear

additive             : 36 52 53 54 55 56 57
assignment           : 27
bit_and              : 33 48 49
bit_or               : 31 46 47
block                : 4 5 20
block_item           : 5 17 17
conditional          : 28 61
declaration          : 8
empty                : 6 24
equality             : 34 49 50 51
expression           : 11 12 13 14 15 16 18 23 26 44 61 64
function             : 2
logical_and          : 30 45 46
logical_or           : 29 45 61
multiplicative       : 37 56 57 58 59 60
opt_expression       : 17 19
postfix              : 39
primary              : 40
program              : 0
relational           : 35 50 51 52 53 54 55
statement            : 7 13 16 17
statement_matched    : 9 11 11 12 14
statement_unmatched  : 10 12 15
type                 : 4 25 26
unary                : 38 41 42 43 58 59 60
xor                  : 32 47 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . function
    (4) function -> . type Identifier LParen RParen LBrace block RBrace
    (3) type -> . Int

    Int             shift and go to state 4

    program                        shift and go to state 1
    function                       shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) program -> function .

    $end            reduce using rule 2 (program -> function .)


state 3

    (4) function -> type . Identifier LParen RParen LBrace block RBrace

    Identifier      shift and go to state 5


state 4

    (3) type -> Int .

    Identifier      reduce using rule 3 (type -> Int .)


state 5

    (4) function -> type Identifier . LParen RParen LBrace block RBrace

    LParen          shift and go to state 6


state 6

    (4) function -> type Identifier LParen . RParen LBrace block RBrace

    RParen          shift and go to state 7


state 7

    (4) function -> type Identifier LParen RParen . LBrace block RBrace

    LBrace          shift and go to state 8


state 8

    (4) function -> type Identifier LParen RParen LBrace . block RBrace
    (5) block -> . block block_item
    (6) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 9
    empty                          shift and go to state 10

state 9

    (4) function -> type Identifier LParen RParen LBrace block . RBrace
    (5) block -> block . block_item
    (7) block_item -> . statement
    (8) block_item -> . declaration Semi
    (9) statement -> . statement_matched
    (10) statement -> . statement_unmatched
    (16) statement -> . Do statement While LParen expression RParen
    (17) statement -> . For LParen block_item block_item opt_expression RParen statement
    (25) declaration -> . type Identifier
    (26) declaration -> . type Identifier Assign expression
    (11) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (14) statement_matched -> . While LParen expression RParen statement_matched
    (18) statement_matched -> . Return expression Semi
    (19) statement_matched -> . opt_expression Semi
    (20) statement_matched -> . LBrace block RBrace
    (21) statement_matched -> . Break Semi
    (22) statement_matched -> . Continue Semi
    (12) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> . If LParen expression RParen statement
    (15) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (3) type -> . Int
    (23) opt_expression -> . expression
    (24) opt_expression -> . empty
    (27) expression -> . assignment
    (1) empty -> .
    (28) assignment -> . conditional
    (44) assignment -> . Identifier Assign expression
    (29) conditional -> . logical_or
    (61) conditional -> . logical_or Question expression Colon conditional
    (30) logical_or -> . logical_and
    (45) logical_or -> . logical_or Or logical_and
    (31) logical_and -> . bit_or
    (46) logical_and -> . logical_and And bit_or
    (32) bit_or -> . xor
    (47) bit_or -> . bit_or BitOr xor
    (33) xor -> . bit_and
    (48) xor -> . xor Xor bit_and
    (34) bit_and -> . equality
    (49) bit_and -> . bit_and BitAnd equality
    (35) equality -> . relational
    (50) equality -> . equality NotEqual relational
    (51) equality -> . equality Equal relational
    (36) relational -> . additive
    (52) relational -> . relational Less additive
    (53) relational -> . relational Greater additive
    (54) relational -> . relational LessEqual additive
    (55) relational -> . relational GreaterEqual additive
    (37) additive -> . multiplicative
    (56) additive -> . additive Plus multiplicative
    (57) additive -> . additive Minus multiplicative
    (38) multiplicative -> . unary
    (58) multiplicative -> . multiplicative Mul unary
    (59) multiplicative -> . multiplicative Div unary
    (60) multiplicative -> . multiplicative Mod unary
    (39) unary -> . postfix
    (41) unary -> . Minus unary
    (42) unary -> . BitNot unary
    (43) unary -> . Not unary
    (40) postfix -> . primary
    (62) primary -> . Integer
    (63) primary -> . Identifier
    (64) primary -> . LParen expression RParen

    RBrace          shift and go to state 15
    Do              shift and go to state 21
    For             shift and go to state 24
    If              shift and go to state 26
    While           shift and go to state 22
    Return          shift and go to state 27
    LBrace          shift and go to state 14
    Break           shift and go to state 28
    Continue        shift and go to state 29
    Int             shift and go to state 4
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    type                           shift and go to state 11
    block_item                     shift and go to state 16
    statement                      shift and go to state 17
    declaration                    shift and go to state 18
    statement_matched              shift and go to state 19
    statement_unmatched            shift and go to state 20
    expression                     shift and go to state 23
    opt_expression                 shift and go to state 25
    empty                          shift and go to state 30
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 10

    (6) block -> empty .

    RBrace          reduce using rule 6 (block -> empty .)
    Do              reduce using rule 6 (block -> empty .)
    For             reduce using rule 6 (block -> empty .)
    If              reduce using rule 6 (block -> empty .)
    While           reduce using rule 6 (block -> empty .)
    Return          reduce using rule 6 (block -> empty .)
    LBrace          reduce using rule 6 (block -> empty .)
    Break           reduce using rule 6 (block -> empty .)
    Continue        reduce using rule 6 (block -> empty .)
    Int             reduce using rule 6 (block -> empty .)
    Identifier      reduce using rule 6 (block -> empty .)
    Minus           reduce using rule 6 (block -> empty .)
    BitNot          reduce using rule 6 (block -> empty .)
    Not             reduce using rule 6 (block -> empty .)
    Integer         reduce using rule 6 (block -> empty .)
    LParen          reduce using rule 6 (block -> empty .)
    Semi            reduce using rule 6 (block -> empty .)


state 11

    (25) declaration -> type . Identifier
    (26) declaration -> type . Identifier Assign expression

    Identifier      shift and go to state 49


state 12

    (44) assignment -> Identifier . Assign expression
    (63) primary -> Identifier .

    Assign          shift and go to state 50
    Mul             reduce using rule 63 (primary -> Identifier .)
    Div             reduce using rule 63 (primary -> Identifier .)
    Mod             reduce using rule 63 (primary -> Identifier .)
    Plus            reduce using rule 63 (primary -> Identifier .)
    Minus           reduce using rule 63 (primary -> Identifier .)
    Less            reduce using rule 63 (primary -> Identifier .)
    Greater         reduce using rule 63 (primary -> Identifier .)
    LessEqual       reduce using rule 63 (primary -> Identifier .)
    GreaterEqual    reduce using rule 63 (primary -> Identifier .)
    NotEqual        reduce using rule 63 (primary -> Identifier .)
    Equal           reduce using rule 63 (primary -> Identifier .)
    BitAnd          reduce using rule 63 (primary -> Identifier .)
    Xor             reduce using rule 63 (primary -> Identifier .)
    BitOr           reduce using rule 63 (primary -> Identifier .)
    And             reduce using rule 63 (primary -> Identifier .)
    Question        reduce using rule 63 (primary -> Identifier .)
    Or              reduce using rule 63 (primary -> Identifier .)
    Semi            reduce using rule 63 (primary -> Identifier .)
    RParen          reduce using rule 63 (primary -> Identifier .)
    Colon           reduce using rule 63 (primary -> Identifier .)


state 13

    (64) primary -> LParen . expression RParen
    (27) expression -> . assignment
    (28) assignment -> . conditional
    (44) assignment -> . Identifier Assign expression
    (29) conditional -> . logical_or
    (61) conditional -> . logical_or Question expression Colon conditional
    (30) logical_or -> . logical_and
    (45) logical_or -> . logical_or Or logical_and
    (31) logical_and -> . bit_or
    (46) logical_and -> . logical_and And bit_or
    (32) bit_or -> . xor
    (47) bit_or -> . bit_or BitOr xor
    (33) xor -> . bit_and
    (48) xor -> . xor Xor bit_and
    (34) bit_and -> . equality
    (49) bit_and -> . bit_and BitAnd equality
    (35) equality -> . relational
    (50) equality -> . equality NotEqual relational
    (51) equality -> . equality Equal relational
    (36) relational -> . additive
    (52) relational -> . relational Less additive
    (53) relational -> . relational Greater additive
    (54) relational -> . relational LessEqual additive
    (55) relational -> . relational GreaterEqual additive
    (37) additive -> . multiplicative
    (56) additive -> . additive Plus multiplicative
    (57) additive -> . additive Minus multiplicative
    (38) multiplicative -> . unary
    (58) multiplicative -> . multiplicative Mul unary
    (59) multiplicative -> . multiplicative Div unary
    (60) multiplicative -> . multiplicative Mod unary
    (39) unary -> . postfix
    (41) unary -> . Minus unary
    (42) unary -> . BitNot unary
    (43) unary -> . Not unary
    (40) postfix -> . primary
    (62) primary -> . Integer
    (63) primary -> . Identifier
    (64) primary -> . LParen expression RParen

    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    expression                     shift and go to state 51
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 14

    (20) statement_matched -> LBrace . block RBrace
    (5) block -> . block block_item
    (6) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 52
    empty                          shift and go to state 10

state 15

    (4) function -> type Identifier LParen RParen LBrace block RBrace .

    $end            reduce using rule 4 (function -> type Identifier LParen RParen LBrace block RBrace .)


state 16

    (5) block -> block block_item .

    RBrace          reduce using rule 5 (block -> block block_item .)
    Do              reduce using rule 5 (block -> block block_item .)
    For             reduce using rule 5 (block -> block block_item .)
    If              reduce using rule 5 (block -> block block_item .)
    While           reduce using rule 5 (block -> block block_item .)
    Return          reduce using rule 5 (block -> block block_item .)
    LBrace          reduce using rule 5 (block -> block block_item .)
    Break           reduce using rule 5 (block -> block block_item .)
    Continue        reduce using rule 5 (block -> block block_item .)
    Int             reduce using rule 5 (block -> block block_item .)
    Identifier      reduce using rule 5 (block -> block block_item .)
    Minus           reduce using rule 5 (block -> block block_item .)
    BitNot          reduce using rule 5 (block -> block block_item .)
    Not             reduce using rule 5 (block -> block block_item .)
    Integer         reduce using rule 5 (block -> block block_item .)
    LParen          reduce using rule 5 (block -> block block_item .)
    Semi            reduce using rule 5 (block -> block block_item .)


state 17

    (7) block_item -> statement .

    RBrace          reduce using rule 7 (block_item -> statement .)
    Do              reduce using rule 7 (block_item -> statement .)
    For             reduce using rule 7 (block_item -> statement .)
    If              reduce using rule 7 (block_item -> statement .)
    While           reduce using rule 7 (block_item -> statement .)
    Return          reduce using rule 7 (block_item -> statement .)
    LBrace          reduce using rule 7 (block_item -> statement .)
    Break           reduce using rule 7 (block_item -> statement .)
    Continue        reduce using rule 7 (block_item -> statement .)
    Int             reduce using rule 7 (block_item -> statement .)
    Identifier      reduce using rule 7 (block_item -> statement .)
    Minus           reduce using rule 7 (block_item -> statement .)
    BitNot          reduce using rule 7 (block_item -> statement .)
    Not             reduce using rule 7 (block_item -> statement .)
    Integer         reduce using rule 7 (block_item -> statement .)
    LParen          reduce using rule 7 (block_item -> statement .)
    Semi            reduce using rule 7 (block_item -> statement .)
    RParen          reduce using rule 7 (block_item -> statement .)


state 18

    (8) block_item -> declaration . Semi

    Semi            shift and go to state 53


state 19

    (9) statement -> statement_matched .

    RBrace          reduce using rule 9 (statement -> statement_matched .)
    Do              reduce using rule 9 (statement -> statement_matched .)
    For             reduce using rule 9 (statement -> statement_matched .)
    If              reduce using rule 9 (statement -> statement_matched .)
    While           reduce using rule 9 (statement -> statement_matched .)
    Return          reduce using rule 9 (statement -> statement_matched .)
    LBrace          reduce using rule 9 (statement -> statement_matched .)
    Break           reduce using rule 9 (statement -> statement_matched .)
    Continue        reduce using rule 9 (statement -> statement_matched .)
    Int             reduce using rule 9 (statement -> statement_matched .)
    Identifier      reduce using rule 9 (statement -> statement_matched .)
    Minus           reduce using rule 9 (statement -> statement_matched .)
    BitNot          reduce using rule 9 (statement -> statement_matched .)
    Not             reduce using rule 9 (statement -> statement_matched .)
    Integer         reduce using rule 9 (statement -> statement_matched .)
    LParen          reduce using rule 9 (statement -> statement_matched .)
    Semi            reduce using rule 9 (statement -> statement_matched .)
    RParen          reduce using rule 9 (statement -> statement_matched .)


state 20

    (10) statement -> statement_unmatched .

    RBrace          reduce using rule 10 (statement -> statement_unmatched .)
    Do              reduce using rule 10 (statement -> statement_unmatched .)
    For             reduce using rule 10 (statement -> statement_unmatched .)
    If              reduce using rule 10 (statement -> statement_unmatched .)
    While           reduce using rule 10 (statement -> statement_unmatched .)
    Return          reduce using rule 10 (statement -> statement_unmatched .)
    LBrace          reduce using rule 10 (statement -> statement_unmatched .)
    Break           reduce using rule 10 (statement -> statement_unmatched .)
    Continue        reduce using rule 10 (statement -> statement_unmatched .)
    Int             reduce using rule 10 (statement -> statement_unmatched .)
    Identifier      reduce using rule 10 (statement -> statement_unmatched .)
    Minus           reduce using rule 10 (statement -> statement_unmatched .)
    BitNot          reduce using rule 10 (statement -> statement_unmatched .)
    Not             reduce using rule 10 (statement -> statement_unmatched .)
    Integer         reduce using rule 10 (statement -> statement_unmatched .)
    LParen          reduce using rule 10 (statement -> statement_unmatched .)
    Semi            reduce using rule 10 (statement -> statement_unmatched .)
    RParen          reduce using rule 10 (statement -> statement_unmatched .)


state 21

    (16) statement -> Do . statement While LParen expression RParen
    (9) statement -> . statement_matched
    (10) statement -> . statement_unmatched
    (16) statement -> . Do statement While LParen expression RParen
    (17) statement -> . For LParen block_item block_item opt_expression RParen statement
    (11) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (14) statement_matched -> . While LParen expression RParen statement_matched
    (18) statement_matched -> . Return expression Semi
    (19) statement_matched -> . opt_expression Semi
    (20) statement_matched -> . LBrace block RBrace
    (21) statement_matched -> . Break Semi
    (22) statement_matched -> . Continue Semi
    (12) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> . If LParen expression RParen statement
    (15) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (23) opt_expression -> . expression
    (24) opt_expression -> . empty
    (27) expression -> . assignment
    (1) empty -> .
    (28) assignment -> . conditional
    (44) assignment -> . Identifier Assign expression
    (29) conditional -> . logical_or
    (61) conditional -> . logical_or Question expression Colon conditional
    (30) logical_or -> . logical_and
    (45) logical_or -> . logical_or Or logical_and
    (31) logical_and -> . bit_or
    (46) logical_and -> . logical_and And bit_or
    (32) bit_or -> . xor
    (47) bit_or -> . bit_or BitOr xor
    (33) xor -> . bit_and
    (48) xor -> . xor Xor bit_and
    (34) bit_and -> . equality
    (49) bit_and -> . bit_and BitAnd equality
    (35) equality -> . relational
    (50) equality -> . equality NotEqual relational
    (51) equality -> . equality Equal relational
    (36) relational -> . additive
    (52) relational -> . relational Less additive
    (53) relational -> . relational Greater additive
    (54) relational -> . relational LessEqual additive
    (55) relational -> . relational GreaterEqual additive
    (37) additive -> . multiplicative
    (56) additive -> . additive Plus multiplicative
    (57) additive -> . additive Minus multiplicative
    (38) multiplicative -> . unary
    (58) multiplicative -> . multiplicative Mul unary
    (59) multiplicative -> . multiplicative Div unary
    (60) multiplicative -> . multiplicative Mod unary
    (39) unary -> . postfix
    (41) unary -> . Minus unary
    (42) unary -> . BitNot unary
    (43) unary -> . Not unary
    (40) postfix -> . primary
    (62) primary -> . Integer
    (63) primary -> . Identifier
    (64) primary -> . LParen expression RParen

    Do              shift and go to state 21
    For             shift and go to state 24
    If              shift and go to state 26
    While           shift and go to state 22
    Return          shift and go to state 27
    LBrace          shift and go to state 14
    Break           shift and go to state 28
    Continue        shift and go to state 29
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    statement                      shift and go to state 54
    expression                     shift and go to state 23
    statement_matched              shift and go to state 19
    statement_unmatched            shift and go to state 20
    opt_expression                 shift and go to state 25
    empty                          shift and go to state 30
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 22

    (14) statement_matched -> While . LParen expression RParen statement_matched
    (15) statement_unmatched -> While . LParen expression RParen statement_unmatched

    LParen          shift and go to state 55


state 23

    (23) opt_expression -> expression .

    Semi            reduce using rule 23 (opt_expression -> expression .)
    RParen          reduce using rule 23 (opt_expression -> expression .)


state 24

    (17) statement -> For . LParen block_item block_item opt_expression RParen statement

    LParen          shift and go to state 56


state 25

    (19) statement_matched -> opt_expression . Semi

    Semi            shift and go to state 57


state 26

    (11) statement_matched -> If . LParen expression RParen statement_matched Else statement_matched
    (12) statement_unmatched -> If . LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> If . LParen expression RParen statement

    LParen          shift and go to state 58


state 27

    (18) statement_matched -> Return . expression Semi
    (27) expression -> . assignment
    (28) assignment -> . conditional
    (44) assignment -> . Identifier Assign expression
    (29) conditional -> . logical_or
    (61) conditional -> . logical_or Question expression Colon conditional
    (30) logical_or -> . logical_and
    (45) logical_or -> . logical_or Or logical_and
    (31) logical_and -> . bit_or
    (46) logical_and -> . logical_and And bit_or
    (32) bit_or -> . xor
    (47) bit_or -> . bit_or BitOr xor
    (33) xor -> . bit_and
    (48) xor -> . xor Xor bit_and
    (34) bit_and -> . equality
    (49) bit_and -> . bit_and BitAnd equality
    (35) equality -> . relational
    (50) equality -> . equality NotEqual relational
    (51) equality -> . equality Equal relational
    (36) relational -> . additive
    (52) relational -> . relational Less additive
    (53) relational -> . relational Greater additive
    (54) relational -> . relational LessEqual additive
    (55) relational -> . relational GreaterEqual additive
    (37) additive -> . multiplicative
    (56) additive -> . additive Plus multiplicative
    (57) additive -> . additive Minus multiplicative
    (38) multiplicative -> . unary
    (58) multiplicative -> . multiplicative Mul unary
    (59) multiplicative -> . multiplicative Div unary
    (60) multiplicative -> . multiplicative Mod unary
    (39) unary -> . postfix
    (41) unary -> . Minus unary
    (42) unary -> . BitNot unary
    (43) unary -> . Not unary
    (40) postfix -> . primary
    (62) primary -> . Integer
    (63) primary -> . Identifier
    (64) primary -> . LParen expression RParen

    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    expression                     shift and go to state 59
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 28

    (21) statement_matched -> Break . Semi

    Semi            shift and go to state 60


state 29

    (22) statement_matched -> Continue . Semi

    Semi            shift and go to state 61


state 30

    (24) opt_expression -> empty .

    Semi            reduce using rule 24 (opt_expression -> empty .)
    RParen          reduce using rule 24 (opt_expression -> empty .)


state 31

    (27) expression -> assignment .
